prevents wrapping of the text for space

--- a/src/styles/Tags.module.scss
+++ b/src/styles/Tags.module.scss
@@ -11,6 +11,7 @@
     align-items: center;
     background: #d3d3d3;
     height: 2em;
+    white-space: nowrap;
   }
 
   @include mq(mobile) {
